# pragma-historic

./: README.md
applications/: default.html
applications/FMO/: FMO.html  Port.html  Results.html  Status.html
applications/amber/: default.html  index.html
applications/biogrid/: applications.html  default.html  mpiBLAST_requirement.html  mpiBLAST_sc2004_demo.html
applications/biogrid/mpiBlast-g2/: AUTHORS  ChangeLog  INSTALL.mpiBLAST-g2.html  LICENSE  Makefile.am  Makefile.in  README.mpiBLAST-g2.html  README.mpiblast  TODO  WWWBlastWrap.pl  blast.cgi  configure  mpiblast.nsi  patch-NCBIToolbox_Nov14_2003  readdb-patch-2002-08  readdb.patch-2002-12
applications/biogrid/mpiBlast-g2/CVS/: Entries
applications/biogrid/mpiBlast-g2/example/: BLAST_drosoph.nt.out  EXAMPLE.mpiBLAST-g2.html  README  README.html  machinefile  mpiblast-g2.rsl  run.sh
applications/biogrid/mpiBlast-g2/example/CVS/: Entries
applications/biogrid/mpiBlast-g2/job/CVS/: Repository  Root
applications/biogrid/mpiBlast-g2/msvc_projects/: mpiblast.sln  mpiblast.vcproj  mpiformatdb.vcproj
applications/biogrid/mpiBlast-g2/msvc_projects/CVS/: Entries  Repository
applications/biogrid/mpiBlast-g2/scripts/: blast-g2.dbcopy  blast-g2.exec  blast-g2.gui  blast-g2.id2name  blast-g2.killzombies_aist  blast-g2.killzombies_pbs  blast-g2.killzombies_sdsc  blast-g2.prof  blast-g2.submit  blast-g2.submit.pl  blast-g2.tardb  blast-imager.pl  machinefile
applications/biogrid/mpiBlast-g2/scripts/CVS/: Entries  Repository
applications/biogrid/mpiBlast-g2/scripts/Common/: KillZombies.pm
applications/biogrid/mpiBlast-g2/scripts/Common/CVS/: Entries  Repository
applications/biogrid/mpiBlast-g2/scripts/viewer/: entryname2long  fastaentrynamelong.script  mkdiv  prositeDOCentryname1
applications/biogrid/mpiBlast-g2/scripts/viewer/CVS/: Entries  Repository
applications/biogrid/mpiBlast-g2/share/pixmaps/CVS/: Entries
applications/biogrid/mpiBlast-g2/src/: Makefile.in  blast_hooks.c  blast_hooks.h  db_spec.cpp  distributed_bioseq.c  file_util.hpp  fragment_list.cpp  gasscopy.c  gasscopy.h  getopt.c  mpiblast.cpp  mpiblast_config.cpp  mpiblast_util.cpp  mpiblast_util.hpp  mpiformatdb.cpp  ncbi_sizeof.c
applications/biogrid/mpiBlast-g2/src/.deps/: db_spec.Po  file_util.Po  fragment_list.Po  mpiblast-blastjob.Po  mpiblast-db_spec.Po  mpiblast-distributed_bioseq.Po  mpiblast-embed_rank.Po  mpiblast-file_util.Po  mpiblast-fragment_list.Po  mpiblast-mpiblast.Po  mpiblast-mpiblast_util.Po  mpiblast_config.Po  mpiblast_util.Po  mpiformatdb.Po
applications/biogrid/mpiBlast-g2/src/.deps/CVS/: Entries
applications/biogrid/mpiBlast-g2/src/CVS/: Entries  Repository
applications/biogrid/mpiBlast-g2_050305/: BUGFIX.txt  NEWS.mpiblast  configure.in  mpiblast-gasscopy.conf  mpiblast.conf  readdb.patch
applications/biogrid/mpiBlast-g2_050305/CVS/: Entries  Repository
applications/biogrid/mpiBlast-g2_050305/example/: EXAMPLE.mpiBLAST-g2.html
applications/biogrid/mpiBlast-g2_050305/example/CVS/: Entries  Repository
applications/biogrid/mpiBlast-g2_050305/job/simple/CVS/: Repository  Root
applications/biogrid/mpiBlast-g2_050305/msvc_projects/CVS/: Entries
applications/biogrid/mpiBlast-g2_050305/scripts/: blast-g2.dbcopy  blast-g2.gui  blast-g2.gview  blast-g2.killzombies_aist  blast-g2.killzombies_pbs  blast-g2.killzombies_sdsc  blast-g2.plot  blast-g2.submit.pl  blast2table.pl
applications/biogrid/mpiBlast-g2_050305/scripts/CVS/: Entries
applications/biogrid/mpiBlast-g2_050305/scripts/viewer/: MSPcrunch  efetch  efetchIndex  fastaentryname1long  prositeDOCentryname.script
applications/biogrid/mpiBlast-g2_050305/scripts/viewer/CVS/: Entries
applications/biogrid/mpiBlast-g2_050305/share/CVS/: Repository
applications/biogrid/mpiBlast-g2_050305/share/pixmaps/CVS/: Entries  Repository
applications/biogrid/mpiBlast-g2_050305/src/: Makefile.am  Makefile.in  blastjob.cpp  blastjob.hpp  db_spec.hpp  distributed_bioseq.h  embed_rank.cpp  embed_rank.hpp  file_util.cpp  fragment_list.hpp  mpiblast.hpp  mpiblast_config.hpp  mpiblast_types.h  ncbi_sizeof.h
applications/biogrid/mpiBlast-g2_050305/src/.deps/: db_spec.Po  file_util.Po  fragment_list.Po  mpiblast-blast_hooks.Po  mpiblast-blastjob.Po  mpiblast-db_spec.Po  mpiblast-distributed_bioseq.Po  mpiblast-embed_rank.Po  mpiblast-file_util.Po  mpiblast-fragment_list.Po  mpiblast-mpiblast.Po  mpiblast-mpiblast_config.Po  mpiblast-mpiblast_util.Po  mpiblast-ncbi_sizeof.Po  mpiblast_util.Po  mpiformatdb.Po
applications/biogrid/mpiBlast-g2_050305/src/.deps/CVS/: Entries  Repository
applications/biogrid/mpiBlast-g2_050305/src/CVS/: Entries
applications/gamess-apbs/: gamess_page.html  index.html
applications/gfarm/: default.html  gfarm.html
applications/gt4upgrade/: mjk-20051209.txt  sge.in
applications/igap/: igap.html
applications/mm5/: default.html
applications/multigrid-tddft/: default.html  requirement.html
applications/qmmd/: id_rsa_takemiya.pub  id_rsa_tanimura.pub  overview.html  qmmd_requirement.html
applications/savannah/: Log for transferring vf_ccam.htm  default.html  id_dsa.pub  requirement.html  status.html
applications/siesta/: index.html  index.html.save  instructions.html
applications/tddft/: 1st-user-final-report.html  1st-user-interim-report.html  2nd_user.html  2ndrun.htm  LLslides.htm  Lessons.htm  default.html  lessons.html  monitor.html  trial_errors.html
gin/: DN_Charles-Bacon.htm  gin-egee.html  gin-join.html  gin-lesson1.html  gin-monitor.htm  gin-people.html  gin-resources.html  gin-status_peter+cindy.ppt  index.html
gin/default_files/: filelist.xml
pragma-ca/: firewall.html  hosts.local  useraccounts.html
pragma-ca/accounts/: all-accounts  grid-mapfile  pragma_setuser  usertest.sh
pragma-ca/certificates/: README.pragma  README.resurgence.txt  cert-exp-date  pragma-certs.txt  pragma-ucsd-ca-cp-cps.doc  ssl-cert-check
pragma-doc/2002/: igrid2002_demo.ppt  march_2002_nlanr.ppt
pragma-doc/2006/: APACGrid.ppt  APGridPMA_YoshioTanaka.ppt
pragma-doc/conferences/: e-science08.html
pragma-doc/pragma14/: README  (+21 more)
(+580 files in other folders)
