dist_sysconf_DATA = mpiblast.conf
EXTRA_DIST = LICENSE readdb.patch readdb.patch-2002-12 readdb-patch-2002-08 \
             blast.cgi WWWBlastWrap.pl msvc_projects/mpiblast.sln \
			 msvc_projects/mpiblast.vcproj msvc_projects/mpiformatdb.vcproj \
			 TODO mpiblast.nsi patch-NCBIToolbox_Nov14_2003
SUBDIRS = src 

